2013-08-20  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (note, override, html-notes-table)
	(html-overrides-table): Add link to resource details page with tooltip
	ontext values. Move text to first column.

2013-08-20  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (user, group, role, target, port_list)
	(lsc_credential, config, alert, tag, filter, schedule, report_format)
	(slave, agent, permission, get_info_cpe_lnk, get_info_cve_lnk)
	(get_info_ovaldef_lnk, get_info_dfn_cert_adv_lnk): Add tooltip for view
	resource details links.
	(get_info_nvt_lnk): Remove tooltip parameter. Fix tooltip.
	(info/nvt): Adjust get_info_nvt_lnk call.

2013-08-20  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (info/allinfo): Extract summary tag from extra info
	for new style nvts.

2013-08-20  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/help.xsl (permissions.html, new_permission.html)
	(permission_details.html, roles.html, role_details.html): New templates.
	(contents.html): Add permissions and roles help pages links.

	* src/html/omp.xsl (details-header-icons): Add nonew parameter to
	disable new resource button.
	(html-permissions-table, html-permissions-table-trash): Fix column
	names.
	(role [details]): Add nonew parameter to details-header-icons template
	call.

2013-08-20  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (list-window-line-actions): Add notrashcan parameter
	to disable move to trashcan action help. Remove Details action help.

	* src/html/help.xsl (hosts.html, agents.html, lsc_credentials.html)
	(report_formats.html, users.html, tasks.html, cpes.html, cves.html)
	(nvts.html, ovaldefs.html, dfn_cert_advs.html, allinfo.thml): Update
	help documentation.

2013-08-20  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (list-window-line-icons, info/cpe, info/cve)
	(info/nvt, info/ovaldef, info/dfn_cert_adv, info/allinfo): Remove