@@ -1,3 +1,12 @@
+2013-08-20  Matthew Mundell <matthew.mundell@greenbone.net>
+
+	* src/gsad_omp.c (get_task): Get reports with a separate GET_REPORTS
+	command.
+
+	* src/html/omp.xsl (task [details]): Select reports from GET_REPORTS
+	response.
+	(report): Adjust paths now that the report has moved in the XML.
+
 2013-08-20  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	* src/html/omp.xsl (note, override, html-notes-table)
